multi: form handling with enum